--- a/FoodShelves.csproj
+++ b/FoodShelves.csproj
@@ -58,12 +58,14 @@
   <None Remove="assets\foodshelves\blocktypes\barrels\firkin.json" />
   <None Remove="assets\foodshelves\blocktypes\barrels\firkinrack.json" />
   <None Remove="assets\foodshelves\blocktypes\baskets\eggbasket.json" />
+  <None Remove="assets\foodshelves\blocktypes\baskets\mushroombasket.json" />
   <None Remove="assets\foodshelves\blocktypes\coolingcabinet.json" />
   <None Remove="assets\foodshelves\blocktypes\eggshelf.json" />
   <None Remove="assets\foodshelves\blocktypes\fruitbasket.json" />
   <None Remove="assets\foodshelves\blocktypes\glassware\ceilingjar.json" />
   <None Remove="assets\foodshelves\blocktypes\glassware\fooddisplayblock.json" />
   <None Remove="assets\foodshelves\blocktypes\glassware\fooddisplaycase.json" />
+  <None Remove="assets\foodshelves\blocktypes\glassware\fruitcooler.json" />
   <None Remove="assets\foodshelves\blocktypes\glassware\meatfreezer.json" />
   <None Remove="assets\foodshelves\blocktypes\glassware\wallcabinet.json" />
   <None Remove="assets\foodshelves\blocktypes\horizontalbarrelbig.json" />
@@ -82,11 +84,13 @@
   <None Remove="assets\foodshelves\config\restrictions\barrels\tunrack.json" />
   <None Remove="assets\foodshelves\config\restrictions\baskets\eggbasket.json" />
   <None Remove="assets\foodshelves\config\restrictions\baskets\fruitbasket.json" />
+  <None Remove="assets\foodshelves\config\restrictions\baskets\mushroombasket.json" />
   <None Remove="assets\foodshelves\config\restrictions\baskets\vegetablebasket.json" />
   <None Remove="assets\foodshelves\config\restrictions\fooduniversal.json" />
   <None Remove="assets\foodshelves\config\restrictions\general\coolingonly.json" />
   <None Remove="assets\foodshelves\config\restrictions\general\holderuniversal.json" />
   <None Remove="assets\foodshelves\config\restrictions\general\liquidystuff.json" />
+  <None Remove="assets\foodshelves\config\restrictions\glassware\fruitcooler.json" />
   <None Remove="assets\foodshelves\config\restrictions\glassware\meatfreezer.json" />
   <None Remove="assets\foodshelves\config\restrictions\glassware\seedbins.json" />
   <None Remove="assets\foodshelves\config\restrictions\other\buckethook.json" />
@@ -156,12 +160,14 @@
   <None Remove="assets\foodshelves\shapes\block\barrels\tunracktop.json" />
   <None Remove="assets\foodshelves\shapes\block\baskets\eggbasket.json" />
   <None Remove="assets\foodshelves\shapes\block\baskets\FruitBasketHanged.json" />
+  <None Remove="assets\foodshelves\shapes\block\baskets\MushroomBasket.json" />
   <None Remove="assets\foodshelves\shapes\block\baskets\vegetablebasketrope.json" />
   <None Remove="assets\foodshelves\shapes\block\baskets\vegetablestoragebasket.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\CeilingJar.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\fooddisplayblock.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\fooddisplayblocktop.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\fooddisplaycase.json" />
+  <None Remove="assets\foodshelves\shapes\block\glassware\FruitCooler.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\GlassJar.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\MeatFreezer.json" />
   <None Remove="assets\foodshelves\shapes\block\glassware\seedbins.json" />
@@ -183,7 +189,9 @@
   <None Remove="assets\foodshelves\shapes\util\CeilingJarContentCube.json" />
   <None Remove="assets\foodshelves\shapes\util\eggbasketrope.json" />
   <None Remove="assets\foodshelves\shapes\util\FlourSackContentCube.json" />
+  <None Remove="assets\foodshelves\shapes\util\FruitCoolerContentCube.json" />
   <None Remove="assets\foodshelves\shapes\util\GlassJarContentCube.json" />
+  <None Remove="assets\foodshelves\shapes\util\MushroomBasketRope.json" />
   <None Remove="assets\foodshelves\shapes\util\SeedBinsContentCube.json" />
   <None Remove="assets\foodshelves\sounds\block\glasscabinetclose.ogg" />
   <None Remove="assets\foodshelves\sounds\block\glassCabinetOpen.ogg" />
