--- a/FoodShelves.csproj
+++ b/FoodShelves.csproj
@@ -114,6 +114,7 @@
   <None Remove="assets\foodshelves\lang\fr.json" />
   <None Remove="assets\foodshelves\lang\pl.json" />
   <None Remove="assets\foodshelves\lang\pt-br.json" />
+  <None Remove="assets\foodshelves\lang\ru.json" />
   <None Remove="assets\foodshelves\patches\artofcooking.json" />
   <None Remove="assets\foodshelves\patches\artofgrowing.json" />
   <None Remove="assets\foodshelves\patches\butchering.json" />
