--- a/FoodShelves.csproj
+++ b/FoodShelves.csproj
@@ -79,6 +79,7 @@
   <None Remove="assets\foodshelves\blocktypes\shelves\pieshelfattr.json" />
   <None Remove="assets\foodshelves\blocktypes\shelves\shelfshort.json" />
   <None Remove="assets\foodshelves\blocktypes\vegetablebasket.json" />
+  <None Remove="assets\foodshelves\config\handbook\31-foodshelvesguide.json" />
   <None Remove="assets\foodshelves\config\restrictions\barrels\barrelrack.json" />
   <None Remove="assets\foodshelves\config\restrictions\barrels\firkinrack.json" />
   <None Remove="assets\foodshelves\config\restrictions\barrels\tunrack.json" />
@@ -123,6 +124,7 @@
   <None Remove="assets\foodshelves\patches\detailedanimals.json" />
   <None Remove="assets\foodshelves\patches\floralzones.json" />
   <None Remove="assets\foodshelves\patches\gourmand.json" />
+  <None Remove="assets\foodshelves\patches\icyexc.json" />
   <None Remove="assets\foodshelves\patches\longtermfood.json" />
   <None Remove="assets\foodshelves\patches\maltiezfirearms.json" />
   <None Remove="assets\foodshelves\patches\moreanimals.json" />
